--- a/index.html
+++ b/index.html
@@ -4,10 +4,76 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/styles/style.css">
     <title>js-biglietto-treno-form</title>
 </head>
-<body>
+<body class="bg-dark-subtle">
     
+    <header class="my-4 text-center text-uppercase debug">
+        <h1>calcola il prezzo del tuo biglietto</h1>
+    </header>
+
+    <main>
+        <div class="container debug text-center">
+          <form action="#">
+            <div class="row g-3 my-3">
+
+                <div class="col">
+                  <h5>Nome e Cognome</h5>
+                  <input type="text" class="input1 form-control" placeholder="Nome e Cognome">
+                </div>
+
+                <div class="col">
+                  <h5>Km da percorrere</h5>
+                  <input type="text" class="input2 form-control" placeholder="Km da percorrere">
+                </div>
+
+                <div class="col">
+                  <h5>Fascia di etá</h5>
+                  <select class="form-select input3">
+                    <option selected>Fascia di etá</option>
+                    <option value="adult">Adult</option>
+                    <option value="under18">Under 18</option>
+                    <option value="over65">Over 65</option>
+                  </select>
+                </div>
+              </div>
+
+              <div>
+                <button class="btn1 bg-body-tertiary ">Submit</button>
+                <button class="btn2 bg-body-tertiary">Reset</button>
+              </div>
+            </form>
+        </div>
+
+        <section class="hidden text-center my-3 d-none">
+          <h1 class="text-uppercase">Il tuo biglietto</h1>
+          <div class="container text-center my-4 debug">
+            <div class="row m-3">
+              <div class="col-4 debug">
+                <h4 class="text-uppercase">Nome passeggero</h4>
+                <p class='utente'></p>
+              </div>
+              <div class="col-2 debug">
+                <h5>Offerta</h5>
+                <p class="offer"></p>
+              </div>
+              <div class="col-2 debug">
+                <h5>Carrozza</h5>
+                <p class="carrozza"></p>
+              </div>
+              <div class="col-2 debug">
+                <h5>Codice CP</h5>
+                <p class="code"></p>
+              </div>
+              <div class="col-2 debug">
+                <h5>Costo biglietto</h5>
+                <p class="price">&euro;</p>
+              </div>
+            </div>
+          </div>
+        </section>
+    </main>
 
     <script src="js/script.js"></script>
 </body>
